# researcher-ai

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  V2_ARCHITECTURE_PLAN.md  manifest  pyproject.toml  requirements-lock.txt  requirements.txt
.beads/: metadata.json
docs/: ARCHITECTURE.md  TUTORIAL.md  WORKFLOW_GRAPH_IR_PLAN.md  api.rst  cli.md  conf.py  configuration.md  development.md  getting_started.md  index.rst  readthedocs.md  researcher-ai_architecture_review.md  schema_formats.md  test_catalog.md
notebooks/: 01_data_models.ipynb  02_parse_paper.ipynb  03_parse_figures.ipynb  04_parse_methods.ipynb  05_parse_data.ipynb  06_build_pipeline.ipynb  07_end_to_end.ipynb
researcher_ai/: __init__.py
scripts/: bioc_confidence_benchmark.py  check_model_alias_usage.py  django_run_workflow.py  estimate_figure_parse_latency.py  figure_calibration_report.py  generate_schema_catalog.py  generate_test_catalog.py  investigate_figure2_empty_responses.py  phase2_benchmark_gate.py  phase4_benchmark_report.py  profile_test_memory.py  refresh_snapshot_fixtures.py  run_workflow.py
tests/: conftest.py  test_figure_calibration.py  test_figure_calibration_report.py  test_figure_parser.py  test_geo_parser.py  test_integration.py  test_iterative_retrieval.py  test_llm.py  test_methods_parser.py  test_methods_parser_async.py  test_methods_parser_eval.py  test_methods_parser_snapshot.py  test_model_alias_guard.py  test_models.py  test_notebooks.py  test_orchestrator.py  test_paper_indexer.py  test_paper_parser.py  test_phase1_llm_interface.py  test_phase2_benchmark_gate.py  (+14 more)
(+364 files in other folders)
